Change pkg repository links to use https instead of http
PR:	    280647
Event:	    EuroBSDcon 2025

--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -201,7 +201,7 @@ To switch man:pkg[8] from Quarterly to Latest run the following commands:
 [source,shell]
 ....
 # mkdir -p /usr/local/etc/pkg/repos
-# echo 'FreeBSD: { url: "pkg+http://pkg.FreeBSD.org/${ABI}/latest" }' > /usr/local/etc/pkg/repos/FreeBSD.conf
+# echo 'FreeBSD: { url: "pkg+https://pkg.FreeBSD.org/${ABI}/latest" }' > /usr/local/etc/pkg/repos/FreeBSD.conf
 ....
 
 Then run this command to update the local package repositories catalogues for the Latest branch:
@@ -1303,13 +1303,13 @@ FreeBSD: {
 Usually it is easiest to serve a poudriere repository to the client machines via HTTP.
 Set up a webserver to serve up the package directory, for instance: `/usr/local/poudriere/data/packages/13amd64`, where `13amd64` is the name of the build.
 
-If the URL to the package repository is: `http://pkg.example.com/13amd64`,
+If the URL to the package repository is: `https://pkg.example.com/13amd64`,
 then the repository configuration file in `/usr/local/etc/pkg/repos/custom.conf` would look like:
 
 [.programlisting]
 ....
 custom: {
-	url: "http://pkg.example.com/13amd64",
+	url: "https://pkg.example.com/13amd64",
 	enabled: yes,
 }
 ....
