Fix a repeated "in in" by rewriting the german sentence a bit
Event:			EuroBSDcon 2025
Differential Revision:	https://reviews.freebsd.org/D52775

--- a/documentation/content/de/books/developers-handbook/x86/_index.adoc
+++ b/documentation/content/de/books/developers-handbook/x86/_index.adoc
@@ -2406,7 +2406,7 @@ Dies könnte passieren:
 . Der Bildeditor wird unseren Filter laden mittels der C-Funktion `popen()`.
 . Er wird die erste Zeile von Pixeln laden aus einer Bitmap oder Pixmap.
 . Er wird die erste Zeile von Pixeln geschrieben in die _Pipe_, welche zur Variable `fd.in` unseres Filters führt.
-. Unser Filter wird jeden Pixel auslesen von der Eingabe, in in seinen negativen Wert umkehren und ihn in den Ausgabepuffer schreiben.
+. Unser Filter wird jeden Pixel von der Eingabe auslesen, diesen in seinen negativen Wert umkehren und ihn in den Ausgabepuffer schreiben.
 . Unser Filter wird die Funktion `getchar` aufrufen, um das nächste Pixel abzurufen.
 . Die Funktion `getchar` wird einen leeren Eingabepuffer vorfinden und daher die Funktion `read` aufrufen.
 . `read` wird den Systemaufruf `SYS_read` starten.
