update translation of articles/cups to Russian
Reviewed by: maxim (mentor)
Approved by: maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D51976

--- a/documentation/content/ru/articles/cups/_index.adoc
+++ b/documentation/content/ru/articles/cups/_index.adoc
@@ -1,8 +1,11 @@
 ---
-title: Универсальная Система Печати Unix на FreeBSD
 authors:
-  - author: Chess Griffin
+  - 
+    author: 'Chess Griffin'
     email: chess@chessgriffin.com
+description: 'Как установить и использовать CUPS в FreeBSD'
+tags: ["CUPS", "FreeBSD", "Guide", "configuration", "introduction"]
+title: 'Универсальная Система Печати Unix на FreeBSD'
 trademarks: ["freebsd", "general"]
 ---
 
@@ -60,7 +63,7 @@ toc::[]
 
 Для установки CUPS используя пакет, запустите на выполнение такую команду:
 
-[source,shell]
+[source, shell]
 ....
 # pkg install cups
 ....
@@ -105,10 +108,10 @@ application/octet-stream
 
 По окончанию внесения изменений службы man:devfs[8] и CUPS необходимо перезапустить, для чего перезагрузите операционную систему или выполните от пользователя `root` следующие две команды:
 
-[source,shell]
+[source, shell]
 ....
-# /etc/rc.d/devfs restart
-# /usr/local/etc/rc.d/cupsd restart
+# service devfs restart
+# service cupsd restart
 ....
 
 [[printing-cups-configuring-printers]]
@@ -126,7 +129,7 @@ application/octet-stream
 После того, как сервер CUPS был настроен, принтеры добавлены и сделаны доступными в сети, следующий шаг - это настройка клиентов или машин, которые будут иметь доступ к серверу CUPS. Если у вас единственный настольный компьютер, который работает одновременно и сервером и клиентом, то в большинстве этой информации вы не нуждаетесь.
 
 [[printing-cups-clients-unix]]
-=== UNIX(R) клиенты
+=== Клиенты UNIX(R)
 
 На UNIX(R) клиентах также потребуется установить CUPS. После установки системы печати на клиенте, CUPS-принтеры, присутствующие в сети, чаще всего автоматически находятся менеджерами принтеров разных графических оболочек, таких как GNOME или KDE. В качестве альтернативы, вы можете воспользоваться веб-интерфейсом CUPS на клиентской машине по адресу http://localhost:631[http://localhost:631] и на странице администрирования выбрать "Add Printer". Когда перед вами предстанет выпадающий список "Device", просто выберите сетевой CUPS принтер, если он был обнаружен автоматически, или выберите `ipp` или `http` и введите IPP или HTTP адрес (URI) сетевого CUPS принтера:
 
@@ -150,7 +153,7 @@ ServerName server-ip
 В этом случае _server-ip_ необходимо заменить на IP адрес сервера CUPS в сети.
 
 [[printing-cups-clients-windows]]
-=== Windows(R)-клиенты
+=== Клиенты Windows(R)
 
 Версии Windows(R), предшествующие XP, не имели встроенной поддержки протокола IPP. Однако Windows(R) XP и более поздние версии уже обладают такой возможностью. Следовательно, добавить CUPS принтер в этих версиях Windows(R) довольно просто. В большинстве случаев, администратору Windows(R) потребуется запустить мастера установки принтера (`Add Printer`) выбрать сетевой принтер (`Network Printer`), а затем ввести URI следующего формата:
 
@@ -217,7 +220,7 @@ DefaultEncryption Never # comment this line to allow encryption
 
 # Set the default printer/job policies...
 <Policy default>
-  # Job-related operations must be done by the owner or an adminstrator...
+  # Job-related operations must be done by the owner or an administrator...
   <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs \
 Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-Subscription \
 Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job Resume-Job \
@@ -226,7 +229,7 @@ CUPS-Move-Job>
     Order deny,allow
   </Limit>
 
-  # All administration operations require an adminstrator to authenticate...
+  # All administration operations require an administrator to authenticate...
   <Limit Pause-Printer Resume-Printer Set-Printer-Attributes Enable-Printer \
 Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs \
 Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer \
