Add myself (tiga) as a committer to ports tree
As per Committers Guide "Procedure 1. Steps for New Committers",
following steps 1-4:
    * Add an Author Entity
    * Update the List of Developers and Contributors
    * Add a News Item
    * Add a PGP Key

PR:	289889
Approved by:	eduardo, flo (mentors)

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -474,6 +474,9 @@ include::{include-path}kgalazka.key[]
 === `{avg}`
 include::{include-path}avg.key[]
 
+=== `{tiga}`
+include::{include-path}tiga.key[]
+
 === `{beat}`
 include::{include-path}beat.key[]
 
