--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3383,6 +3383,10 @@
 :ticso-email: ticso@FreeBSD.org
 :ticso: {ticso-name} <{ticso-email}>
 
+:tiga-name: Tiago Gasiba
+:tiga-email: tiga@FreeBSD.org
+:tiga: {tiga-name} <{tiga-email}>
+
 :tijl-name: Tijl Coosemans
 :tijl-email: tijl@FreeBSD.org
 :tijl: {tijl-name} <{tijl-email}>
