update links to the latest FreeBSD version.

--- a/website/content/zh-tw/where.adoc
+++ b/website/content/zh-tw/where.adoc
@@ -39,8 +39,8 @@ FreeBSD 安裝程式有許多不同的格式可供下載，包含 CD (disc1)、D
 
 FreeBSD `RELEASE` 版本為 _release engineering_ 的最終成果。
 
-[[download-rel141]]
-=== FreeBSD {rel141-current}-RELEASE
+[[download-rel143]]
+=== FreeBSD {rel143-current}-RELEASE
 
 [.tblbasic]
 [.tblDownload]
@@ -48,53 +48,58 @@ FreeBSD `RELEASE` 版本為 _release engineering_ 的最終成果。
 |===
 |安裝程式映像檔 |虛擬機映像檔 |SD 卡映像檔 |文件
 a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel141-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel141-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel141-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel141-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel141-current}/[powerpc64le]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel141-current}/[powerpcspe]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel141-current}/[armv7]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[aarch64]
-* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel141-current}/[riscv64]
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel143-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel143-current}/[i386]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel143-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel143-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel143-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel143-current}/[powerpcspe]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[riscv64]
 
 a|
 * link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel141-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel141-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel141-current}-RELEASE/aarch64/Latest/[aarch64]
-* link:{url-rel}/VM-IMAGES/{rel141-current}-RELEASE/riscv64/Latest/[riscv64]
-* link:{url-rel}/CI-IMAGES/{rel141-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
 * aarch64
 * {blank}
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[PINE64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[PINE64-LTS]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[ROCK64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[ROCKPRO64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel141-current}/[RPI] (3/4)
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[RPI] (3/4)
 * armv7
 * {blank}
-** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel141-current}/[GENERICSD]
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[GENERICSD]
 * riscv64
 * {blank}
-** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel141-current}/[GENERICSD]
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[GENERICSD]
 
 a|
 * {blank}
-* link:../releases/#current[發行於]: {rel141-current-date}
-* link:{u-rel141-notes}[發行說明]
-* link:{u-rel141-readme}[Readme]
-* link:{u-rel141-hardware}[硬體相容性表]
-* link:{u-rel141-installation}[安裝說明]
-* link:{u-rel141-errata}[勘誤]
-* link:{u-rel141-signatures}[校驗植]
+* link:../releases/#current[發行於]: {rel143-current-date}
+* link:{u-rel143-notes}[發行說明]
+* link:{u-rel143-readme}[Readme]
+* link:{u-rel143-hardware}[硬體相容性表]
+* link:{u-rel143-installation}[安裝說明]
+* link:{u-rel143-errata}[勘誤]
+* link:{u-rel143-signatures}[校驗植]
 
 |===
 
-[[download-rel140]]
-=== FreeBSD {rel140-current}-RELEASE
+== Production 品質 (legacy)
+
+某些 FreeBSD `RELEASEs` 版本雖然仍然支援，但是是由較舊的 `STABLE` 分支建構而來。它們被認為是 "legacy" 版本，可能只有維護現有 FreeBSD 系統的人才有興趣。
+
+[[download-rel142]]
+=== FreeBSD {rel142-current}-RELEASE
 
 [.tblbasic]
 [.tblDownload]
@@ -102,101 +107,103 @@ a|
 |===
 |安裝程式映像檔 |虛擬機映像檔 |SD 卡映像檔 |文件
 a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel140-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel140-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel140-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel140-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel140-current}/[powerpc64le]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel140-current}/[powerpcspe]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel140-current}/[armv7]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel140-current}/[aarch64]
-* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel140-current}/[riscv64]
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel142-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel142-current}/[i386]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel142-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel142-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel142-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel142-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel142-current}/[powerpcspe]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel142-current}/[riscv64]
 
 a|
 * link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel140-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel140-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel140-current}-RELEASE/aarch64/Latest/[aarch64]
-* link:{url-rel}/VM-IMAGES/{rel140-current}-RELEASE/riscv64/Latest/[riscv64]
-* link:{url-rel}/CI-IMAGES/{rel140-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel142-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel142-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
 * aarch64
 * {blank}
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel140-current}/[PINE64-LTS]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel140-current}/[ROCK64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel140-current}/[ROCKPRO64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel140-current}/[RPI] (3/4)
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[RPI] (3/4)
 * armv7
 * {blank}
-** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel140-current}/[GENERICSD]
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel142-current}/[GENERICSD]
 * riscv64
 * {blank}
-** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel140-current}/[GENERICSD]
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel142-current}/[GENERICSD]
 
 a|
 * {blank}
-* link:../releases/#current[發行於]: {rel140-current-date}
-* link:{u-rel140-notes}[發行說明]
-* link:{u-rel140-readme}[Readme]
-* link:{u-rel140-hardware}[硬體相容性表]
-* link:{u-rel140-installation}[安裝說明]
-* link:{u-rel140-errata}[勘誤]
-* link:{u-rel140-signatures}[校驗植]
+* link:../releases/#current[發行於]: {rel142-current-date}
+* link:{u-rel142-notes}[發行說明]
+* link:{u-rel142-readme}[Readme]
+* link:{u-rel142-hardware}[硬體相容性表]
+* link:{u-rel142-installation}[安裝說明]
+* link:{u-rel142-errata}[勘誤]
+* link:{u-rel142-signatures}[校驗植]
 
 |===
 
-[[download-rel133]]
-=== FreeBSD {rel133-current}-RELEASE
+[[download-rel135]]
+=== FreeBSD {rel135-current}-RELEASE
 [.tblbasic]
 [.tblDownload]
 [width="100%",cols="25%,25%,25%,25%",options="header",]
 |===
 |安裝程式映像檔 |虛擬機映像檔 |SD 卡映像檔 |文件
 a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel133-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel133-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel133-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel133-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel133-current}/[powerpc64le]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel133-current}/[powerpcspe]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[aarch64]
-* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel133-current}/[riscv64]
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel135-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel135-current}/[i386]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel135-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel135-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel135-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel135-current}/[powerpcspe]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[aarch64]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[riscv64]
 
 a|
 * link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel133-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel133-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel133-current}-RELEASE/aarch64/Latest/[aarch64]
-* link:{url-rel}/VM-IMAGES/{rel133-current}-RELEASE/riscv64/Latest/[riscv64]
-* link:{url-rel}/CI-IMAGES/{rel133-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
 * aarch64
 * {blank}
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[PINE64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[PINE64-LTS]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[PINEBOOK]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[ROCK64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[ROCKPRO64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel133-current}/[RPI] (3/4)
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINEBOOK]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[RPI] (3/4)
 * armv6/armv7
 * {blank}
-** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel133-current}/[GENERICSD]
-** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel133-current}/[RPI-B]
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel135-current}/[GENERICSD]
+** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel135-current}/[RPI-B]
 * riscv64
 * {blank}
-** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel133-current}/[GENERICSD]
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[GENERICSD]
 
 a|
-* link:../releases/#current[發行於]: {rel133-current-date}
-* link:{u-rel133-notes}[發行說明]
-* link:{u-rel133-readme}[Readme]
-* link:{u-rel133-hardware}[硬體相容性表]
-* link:{u-rel133-installation}[安裝說明]
-* link:{u-rel133-errata}[勘誤]
-* link:{u-rel133-signatures}[校驗植]
-
+* link:../releases/#current[發行於]: {rel135-current-date}
+* link:{u-rel135-notes}[發行說明]
+* link:{u-rel135-readme}[Readme]
+* link:{u-rel135-hardware}[硬體相容性表]
+* link:{u-rel135-installation}[安裝說明]
+* link:{u-rel135-errata}[勘誤]
+* link:{u-rel135-signatures}[校驗植]
 |===
 
 [[helptest]]
