update translation of articles/mailing-list-faq to Russian
Reviewed by: maxim (mentor)
Approved by: maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D51980

--- a/documentation/content/ru/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.adoc
@@ -1,8 +1,11 @@
 ---
-title: Часто задаваемые вопросы по спискам рассылки FreeBSD
 authors:
-  - author: The FreeBSD Documentation Project
-copyright: 2004-2005 The FreeBSD Documentation Project
+  - 
+    author: 'The FreeBSD Documentation Project'
+copyright: '2004-2021 The FreeBSD Documentation Project'
+description: 'Как оптимально использовать почтовые рассылки, в том числе как избежать часто повторяющихся обсуждений'
+tags: ["FAQ", "Mailing Lists", "FreeBSD"]
+title: 'Часто задаваемые вопросы по спискам рассылки FreeBSD'
 ---
 
 = Часто задаваемые вопросы по спискам рассылки FreeBSD
@@ -39,7 +42,7 @@ endif::[]
 [.abstract-title]
 Аннотация
 
-Эта статья посвящена часто задаваемым вопросам (FAQ) по спискам рассылки FreeBSD. Если вы хотите помочь поддерживать данный документ, напишите письмо в {freebsd-doc}. Последняя версия данного документа доступна на link:.[WWW сервере FreeBSD]. Вы можете получить данную статью в виде одного большого link:.[HTML] файла, используя HTTP протокол или в виде простого текста, форматов PostScript, PDF, и других с link:ftp://ftp.FreeBSD.org/pub/FreeBSD/doc/[FTP сервера FreeBSD]. Возможно вы захотите link:https://www.FreeBSD.org/search/[Найти FAQ].
+Эта статья посвящена часто задаваемым вопросам (FAQ) по спискам рассылки FreeBSD. Если вы хотите помочь поддерживать данный документ, напишите письмо в {freebsd-doc}. Последняя версия данного документа доступна на link:.[WWW сервере FreeBSD]. Вы можете получить данную статью в виде одного большого link:.[HTML] файла, используя HTTP протокол или в виде простого текста, форматов PostScript, PDF, и других с https://download.freebsd.org/doc/[FTP сервера FreeBSD]. Возможно вы захотите link:https://www.FreeBSD.org/search/[Найти FAQ].
 
 '''
 
@@ -58,19 +61,21 @@ toc::[]
 
 === Кто пользуется этими списками рассылки?
 
-Это зависит от темы обсуждения каждого конкретного списка рассылки. Некоторые списки больше ориентированны на разработчиков, некоторые на всё сообщество FreeBSD в целом. Список существующих на сегодняшний день списков рассылки доступен http://lists.FreeBSD.org/mailman/listinfo[здесь].
+Это зависит от регламента каждой конкретной рассылки. Некоторые списки больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD в целом. Актуальную информацию смотрите по ссылке: link:https://lists.FreeBSD.org/[этот список].
+
+В списках рассылки используется английский язык, если другой язык не указан явно.
 
 === Доступны ли списки рассылки по FreeBSD для каждого?
 
-Повторюсь, это зависит от характера обсуждаемых тем в каждом конкретном листе. Пожалуйста прочтите устав списка рассылки перед отправлением в него письма и соблюдайте его при каждом отправлении. Это будет полезно каждому получить больше опыта по работе со списками рассылки.
+Повторюсь: это зависит от устава (правил) каждого конкретного списка рассылки. Пожалуйста, прочтите устав списка перед отправкой в него письма и соблюдайте его при каждом сообщении. Это способствует более комфортной работе со списками рассылки.
 
-Если после просмотра выше расположенного списка, вы до сих пор не знаете в какой список рассылки направить письмо, то вам наверняка подойдёт freebsd-questions (но прежде прочтите ниже).
+Если после просмотра выше расположенного списка, вы до сих пор не знаете в какой список рассылки направить письмо, то вам наверняка подойдёт freebsd-questions (но прежде прочтите советы ниже).
 
-Заметьте, что для отправки письма в список рассылки необязательно быть подписанным на него. Это поможет легче присоединиться к сообществу FreeBSD и способствует открытому обмену идей. Но, из-за небрежности некоторых людей некоторые списки проводят политику предварительного ручного просмотра сообщений от не подписанных пользователей, чтобы убедиться в их целесообразности.
+Обратите внимание, что для отправки сообщений в список рассылки необходимо быть его подписчиком. Вы можете оформить подписку, не получая сообщения, которые в него отправляются.
 
 === Как я могу подписаться?
 
-Вы можете использовать http://lists.FreeBSD.org/mailman/listinfo[web интерфейс Mailman] для подписки на любой из открытых списков рассылки.
+Вы можете использовать link:https://lists.FreeBSD.org/[web интерфейс Mlmmj] для подписки на любой из открытых списков рассылки.
 
 === Как мне отписаться?
 
@@ -80,11 +85,11 @@ toc::[]
 
 === Доступны ли архивы?
 
-Да. Архивы доступны http://docs.FreeBSD.org/mail/[здесь].
+Да. Архивы со всеми письмами с 1994 года доступны link:https://mail-archive.freebsd.org/mail/[здесь]. Вот ссылки на https://lists.freebsd.org/pipermail[архив mailman] и link:https://lists.freebsd.org/archives[архив mlmmj].
 
 === Доступны ли списки рассылки в дайджест формате?
 
-Да. Посмотрите http://lists.FreeBSD.org/mailman/listinfo[web интерфейс Mailman].
+Да. Посмотрите link:https://lists.FreeBSD.org/[веб интерфейс Mlmmj].
 
 [[etiquette]]
 == Этикет списков рассылки
@@ -95,53 +100,52 @@ toc::[]
 
 Вы уже сделали важный шаг, решив прочитать эту статью. Если вы новичок во FreeBSD, то сначала ознакомьтесь с программным обеспечением и связанной с нею документацией, включающей множество extref:https://www.FreeBSD.org/docs/[книг и статьей]. Могут быть интересными: extref:{faq}[Часто задаваемые вопросы по FreeBSD (FAQ)], extref:{handbook}[Руководство по FreeBSD], и статьи extref:{freebsd-questions-article}[Как работать со списком рассылки FreeBSD-questions с максимальной отдачей], extref:{explaining-bsd}[Что такое BSD], и extref:{new-users}[Пособие для новичков во FreeBSD].
 
-Вы можете получить нелицеприятные высказывания в свой адрес, если зададите вопрос, ответ на который есть в приведённой выше документации. Это не потому что добровольцы, работающие над данным проектом очень плохие люди, а после многократного ответа на одни и те же вопросы - раздражение берёт своё. Это особенно справедливо, если уже существует и доступен ответ на вопрос. Не забывайте, что вся работа по улучшению FreeBSD выполняется добровольцами, и что мы только люди.
+Считается дурным тоном задавать вопросы, на которые уже есть ответ в приведённых выше документах. Это не потому что добровольцы, работающие над данным проектом очень плохие люди, а после многократного ответа на одни и те же вопросы - раздражение берёт своё. Это особенно справедливо, если уже существует и доступен ответ на вопрос. Не забывайте, что вся работа по улучшению FreeBSD выполняется добровольцами, и что мы только люди.
 
 === Что считается несоответствующим письмом?
 
 * Письма должны соответствовать уставу списка рассылки.
-* Избегайте личных оскорблений. Как хорошие жители сети, мы должны держать себя по высоким стандартам поведения.
+* Личные нападки недопустимы. Как ответственные участники сетевого сообщества, мы должны придерживаться высоких стандартов поведения.
 * Спам не разрешён. Нарушители данного правила будут забаненны.
 
 === Что считается хорошим этикетом при посылке писем в списки рассылки?
 
-* Пожалуйста, составляйте строки длиной примерно в 75 символов, так так не каждый использует модную почтовую программу с графическим интерфейсом.
-* Пожалуйста, обращайте внимание на тот факт, что пропускная способность ограничена. Не каждый читает почту через высокоскоростное соединение. Если вы отправляете содержимое какого-нибудь файла, например [.filename]#config.log# или объёмную трассировку стека, то, пожалуйста, размещайте его на каком-нибудь веб-сайте и присылайте просто ссылку на на него. Помните, что такие сообщения будут заархивированны, и это просто добавит ненужные байты к архиву.
+* Пожалуйста, составляйте строки длиной примерно в 75 символов, так как не каждый использует модную почтовую программу с графическим интерфейсом.
+* Пожалуйста, обращайте внимание на тот факт, что пропускная способность ограничена. Не каждый читает почту через высокоскоростное соединение. Если вы отправляете содержимое какого-нибудь файла, например [.filename]#config.log# или объёмную трассировку стека, то, пожалуйста, размещайте его на каком-нибудь веб-сайте и присылайте просто ссылку на него. Помните, что такие сообщения будут заархивированны, и это просто добавит ненужные байты к архиву.
 * Оформляйте ваше сообщение, чтобы оно было читабельно и ПОЖАЛУЙСТА, НЕ КРИЧИТЕ!!!!!. Не упускайте из виду эффект, которое производит плохо отформатированное письмо, причём не только в списках рассылки FreeBSD. Ваше сообщение будет просмотрено другими людьми, и если оно плохо отформатировано, имеет множество ошибок и/или восклицательных знаков, то это создаст нехорошее впечатление о вас.
 * Пожалуйста, используйте подходящий язык общения для конкретного списка рассылки. link:https://www.FreeBSD.org/community/mailinglists/[ Существует] много не англоязычных рассылок.
-+ 
++
 Мы понимаем, что для многих английский не родной язык и поэтому мы пытаемся сделать некие пособия. Считается плохим тоном критиковать людей не говорящих по-английски за лексические и грамматические ошибки. FreeBSD имеет отличные продвижения в этом отношении. Пожалуйста, помогайте сохранять нам эту традицию.
 * Пожалуйста, используйте совместимый со стандартами почтовый клиент (MUA). Много плохо отформатированных сообщений исходят от http://www.lemis.com/grog/email/email.php[неправильно работающих или плохо сконфигурированных почтовых клиентов]. Известно, что следующие почтовые программы могут посылать неправильно отформатированные сообщения без вашего ведома:
 
 ** exmh
 ** Microsoft(R) Exchange
 ** Microsoft(R) Outlook(R)
-
-+ 
++
 Постарайтесь не использовать MIME: многие используют программы, которые не очень хорошо работают с MIME.
 * Проверьте правильность настроек времени и временной зоны. Это может выглядеть немножко глупо, потому что ваши сообщения все равно будут доставляться, однако многие люди получают несколько сотен сообщений в день. Зачастую они сортируют входящие сообщения по теме и дате, и если ваше сообщение не будет предшествовать первому ответу, то они могут предположить, что оно потерялось и даже не взглянут на него.
 * Основной объем информации, который вы должны предоставить, представляет собой вывод программ, таких, как man:dmesg[8], или консольные сообщения, которые обычно появляются в файле [.filename]#/var/log/messages#. Не пытайтесь скопировать эту информацию, набрав ее снова; это действительно трудно, и здесь легко сделать ошибку. Чтобы послать содержимое файлов протоколов, сделайте копию файла и воспользуйтесь редактором для того, чтобы обрезать информацию, оставив только относящуюся к делу, либо скопируйте и вставьте текст в ваше сообщение. В случае вывода программ, таких, как `dmesg`, перенаправьте вывод в файл и включите его в письмо. Например,
 +
-[source,shell]
+[source, shell]
 ....
 % dmesg > /tmp/dmesg.out
 ....
-+ 
-Данная команда перенаправит информацию в файл [.filename]#/tmp/dmesg.out#.
++
+Эта команда перенаправляет информацию в файл [.filename]#/tmp/dmesg.out#.
 * При использовании операций копирования и вставки учтите, что некоторые такие операции отрицательно сказываются на формате строк. Особенно это стоит учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` является важным символом. Это довольно часто встречающаяся проблема в link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В [.filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` escape последовательности.
 
 === Каких правил этикета стоит придерживаться при ответе на уже существующее сообщение?
 
 * Пожалуйста, включайте относящийся к теме текст из исходного письма. Сокращайте его до минимума, но не переусердствуйте. Любой, кто не читал исходное сообщение должен суметь понять о чём идёт речь.
-+ 
-Это особенно важно для ответов, где исходное сообщение составляло сотни строчек.
-* Отделяйте текст исходного сообщения от текста, добавляемого вами. Чаще всего строчки исходного сообщения предваряются "`>`" и пробелом. Отделяйте ваш текст от текста исходного сообщения пустыми строчками. Эти правила помогут сделать ваши сообщения более читабельными.
-* Пожалуйста, убедитесь, что присваивания текста, который вы цитируйте корректны. Люди могут обидеться, если вы присвоите им слова, которые они не писали.
-* Пожалуйста, не пишите `ответ в начале`. Это значит, что при ответе на сообщения, вставляйте ваши ответы в конец, после текста, копируемого из исходного сообщения.
 +
-** A: Потому что это не соответствует логическому ходу обсуждения.
-** Q: Почему верхнее сообщение осуждает это?
-+ 
+Это особенно важно для ответов в стиле «Да, я это тоже вижу», где исходное сообщение составляло сотни строчек.
+* Отделяйте текст исходного сообщения от текста, добавляемого вами. Чаще всего строчки исходного сообщения предваряются "`>`" и пробелом. Отделяйте ваш текст от текста исходного сообщения пустыми строчками. Эти правила помогут сделать ваши сообщения более читабельными.
+* Пожалуйста, убедитесь в корректном указании авторства текста, который вы цитируйте. Люди могут обидеться, если вы приписываете им слова, которые они не писали.
+* Пожалуйста, не пишите `ответ в начале письма`. Это значит, что при ответе на сообщения вставляйте ваши ответы в конец, после текста, копируемого из исходного сообщения.
++
+** Ответ: Потому что это не соответствует логическому ходу обсуждения.
+** Вопрос: Чем плох ответ в начале письма?
++
 (Спасибо Рэнди Бушу (Randy Bush) за шутку.)
 
 [[recurring]]
@@ -149,16 +153,16 @@ toc::[]
 
 Участие в списках рассылки, как и участие в любом сообществе требует общего базиса для общения. Большое количество рассылок предполагают знание истории Проекта. В частности, существует несколько тем обсуждения, которые возникают у новичков. Обязанность каждого участника не создавать дискуссии на эти темы, тем самым помочь спискам рассылки не отрываться от обсуждаемых тем и обезопасить себя от разгорячённых бесед.
 
-Лучший способ предотвратить это - ознакомиться с http://docs.FreeBSD.org/mail/[архивами списков рассылки], чтобы понять, что происходило до этого. В этом случае, незаменимым окажется http://www.FreeBSD.org/search/#mailinglists[ интерфейс поиска по спискам рассылки]. (Если этот способ не принёс результатов, воспользуйтесь вашей любимой поисковой системой).
+Лучший способ предотвратить это - ознакомиться с http://docs.FreeBSD.org/mail/[архивами списков рассылки], чтобы понять, что происходило до этого. В этом случае, незаменимым окажется https://www.FreeBSD.org/search/#mailinglists[ интерфейс поиска по спискам рассылки]. (Если этот способ не принёс результатов, воспользуйтесь вашей любимой поисковой системой).
 
-Познакомившись с архивами, вы не только будете знать какие темы обсуждались до этого, а также узнаете какие тенденции общения существуют в данной рассылке, кто является участниками и какова конечная аудитория. Эти вещи довольно хорошо знать перед отправкой письма в любую рассылку, и это касается не только списков рассылки FreeBSD.
+Познакомившись с архивами, вы не только будете знать, какие темы обсуждались до этого, но также узнаете, какие тенденции общения существуют в данной рассылке, кто является участниками и какова конечная аудитория. Эти вещи довольно хорошо знать перед отправкой письма в любую рассылку, и это касается не только списков рассылки FreeBSD.
 
-Нет сомнения, что архивы довольно объёмные и некоторые вопросы повторяются гораздо чаще чем другие, иногда в виде откликов (followups), где тема сообщения уже не соответствует новому положению дел. Тем не менее, старайтесь избегать повторяющихся тем.
+Безусловно, архивы весьма обширны, и некоторые вопросы возникают чаще других, иногда в виде цепочек ответов, где заголовок письма уже не отражает содержание обсуждения. Тем не менее, ваша задача как автора — провести предварительную работу, чтобы по возможности избежать этих часто возникающих тем.
 
 [[bikeshed]]
 == Что такое велосипедный навес ("Bikeshed")?
 
-В литературной нотации, `велосипедный навес` - это маленький внешний кожух, в который можно поместить один вид двухколёсного транспорта. Тем не менее, на языке FreeBSD, этот термин ("bikeshed") относится к темам, которые достаточно просты, и на которые (почти) каждый может предложить собственное мнение, и часто (почти) каждый его и предлагает. Детали происхождения данного термина более подробно рассмотрены extref:{faq}[здесь, BIKESHED-PAINTING]. У вас должно иметься представление о данном понятии перед отправкой письма в любой список рассылки FreeBSD.
+В буквальном смысле `bikeshed` (сарай для велосипедов) - это небольшое уличное сооружение для хранения двухколёсного транспорта. Однако в терминологии FreeBSD это понятие относится к темам, достаточно простым для того, чтобы (почти) каждый мог высказать своё мнение, и зачастую (почти) каждый это делает. Детали происхождения данного термина более подробно рассмотрены extref:{faq}[здесь, bikeshed-painting]. У вас должно иметься представление о данном понятии перед отправкой письма в любой список рассылки FreeBSD.
 
 Bikeshed - это тема разговора, которая будет иметь тенденцию порождать немедленные мета-дискуссии и флэйм.
 
