HW Relnotes: Cavium ThunderX + Ampere Altra Max
Add some platforms in use to the Hardware Release Notes template.

Reported by:	dch (Altra Max), Michael Dexter (ThunderX)

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -50,6 +50,7 @@ FreeBSD currently supports the following devices:
 
 Ampere Computing:
 
+* Altra Max
 * Altra
 * eMAG
 
@@ -74,6 +75,10 @@ AWS / Annapurna Labs:
 * Graviton
 * Graviton 2
 * Graviton 3
+
+Cavium:
+
+* ThunderX
 
 NXP Semiconductors:
 
