HW Relnotes: RK3566, RK3568, Raspberry Pi Zero 2 W
Add some platforms in use to the Hardware Release Notes template.

Reported by:    Evgenii Ivanov <devivanov@proton.me>

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -92,6 +92,7 @@ NXP Semiconductors:
 
 Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
 
+* Raspberry Pi Zero 2 W
 * Raspberry Pi 3
 * Raspberry Pi 4
 
@@ -99,6 +100,8 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 
 * RK3328 SoC
 * RK3399 SoC
+* RK3566 SoC
+* RK3568 SoC
 * NanoPC-T4
 * NanoPi R2S
 * NanoPi R2S-Plus
