HW Relnotes: StarFive VisionFive 2
Add a platforms in use to the Hardware Release Notes template.

Reported by:    Evgenii Ivanov <devivanov@proton.me>

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -167,6 +167,7 @@ FreeBSD currently supports the following platforms:
 
 * HiFive Unleashed (SiFive FU540)
 * HiFive Unmatched (SiFive FU740)
+* StarFive VisionFive 2 (StarFive JH7110)
 * Spike
 * QEMU
 
